# droolcat-agent

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.claude/: launch.json
docs/: brief.md
public/samples/: sample-codegraph.json  sample-orchestration.jsonl  sample-session.jsonl
scripts/: install-app.ps1
src/: canvas.js  codegraph.js  graph.js  icons.js  main.js  md.js  styles.css  voice.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codegraph.rs  lib.rs  main.rs  worktree.rs
