[package]
name = "droolcat-agent"
version = "0.1.0"
description = "A visual cockpit on top of the Claude Code CLI"
authors = ["kamilch1k"]
edition = "2021"
rust-version = "1.77.2"

# The library that the desktop binary (and, later, mobile) link against.
[lib]
name = "droolcat_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
